# Core

./: .gitignore  Cargo.toml  Export.sh  LICENSE  Makefile.toml  ReadMe.md  Setup_git_hooks.sh  build.rs  output.txt  package-lock.json  package.json  readme.md  setup_git_hooks.sh  taplo.toml  tolgee.config.ts  tolgee.extractor.mjs  wasm_toolchain.cmake
Examples/Native/: Cargo.toml
Examples/Native/src/: main.rs
Executables/Settings/: Cargo.toml
Executables/Settings/Tests/: Integration_test.rs  integration_test.rs
Executables/Settings/src/: Error.rs  Main.rs  Settings.rs  error.rs  lib.rs  settings.rs
Executables/Settings/src/Tabs/: General.rs  Password.rs  mod.rs
Executables/Settings/src/tabs/: Password.rs  general.rs  mod.rs  password.rs
Executables/Terminal/: Cargo.toml
Executables/Terminal/Tests/: Integration_test.rs  integration_test.rs
Executables/Terminal/src/: Device.rs  Error.rs  Executable.rs  Main.rs  Terminal.rs  device.rs  error.rs  executable.rs  lib.rs  main.rs  terminal.rs
Executables/WASM/: Build.rs  Cargo.toml  build.rs
Executables/WASM/Tests/: Integration_test.rs  integration_test.rs
Executables/WASM/Tests/WASM_test/: Cargo.toml
Executables/WASM/src/: Main.rs  error.rs  lib.rs  main.rs
Modules/ABI/: Build.rs  Cargo.toml  build.rs
Modules/ABI/include/: Xila.h
Modules/ABI/src/: Context.rs  File_system.rs  Memory.rs  Time.rs  User.rs  context.rs  lib.rs  time.rs
Modules/ABI/src/File_system/: Directory.rs  Functions.rs  Socket.rs  (+6 more)
Modules/Authentication/: Cargo.toml
Modules/Authentication/src/: Error.rs  Group.rs  Hash.rs  User.rs  error.rs  group.rs  hash.rs  lib.rs  user.rs
Modules/Bindings/: Build.rs  Cargo.toml
Modules/Bindings/Host/: Cargo.toml
Modules/Bindings/Tests/: File_system.rs  Graphics.rs  Task.rs
Modules/Bindings/Utilities/: Cargo.toml
Modules/Bindings/WASM/: Cargo.toml
Modules/Bindings/src/: File_system.rs  Graphics.rs  Task.rs  lib.rs
Modules/Drivers/: Cargo.toml
Modules/Drivers/src/: Time.rs  lib.rs
Modules/Executable/: Cargo.toml
Modules/Executable/src/: Device_trait.rs  Error.rs  Read_data.rs  Standard.rs  device_trait.rs  error.rs  lib.rs  read_data.rs  standard.rs
Modules/File_system/: Cargo.toml
Modules/File_system/Tests/: Integration.rs  Virtual_file_system.rs
Modules/File_system/src/: ABI.rs  Device.rs  Error.rs  File.rs  File_system.rs  Loader.rs  Memory_device.rs  Prelude.rs  Time.rs  Virtual_file_system.rs  device.rs  error.rs  file_system.rs  lib.rs  memory_device.rs  time.rs
Modules/Graphics/: Cargo.toml
Modules/Graphics/.cargo/: config.toml
Modules/Graphics/Tests/: Graphics.rs  graphics.rs
Modules/Graphics/include/: lv_conf.h  lv_drv_conf.h
Modules/Graphics/src/: Area.rs  Binding.rs  Color.rs  Display.rs  Draw_buffer.rs  Error.rs  Event.rs  Input.rs  LVGL.rs  Manager.rs  Point.rs  Pointer.rs  Screen.rs  Window.rs  area.rs  display.rs  draw_buffer.rs  error.rs  event.rs  lib.rs  manager.rs  point.rs  screen.rs  window.rs
Modules/LittleFS/: Cargo.toml
Modules/LittleFS/src/: Callbacks.rs  Configuration.rs  Directory.rs  Error.rs  File.rs  File_system.rs  Flags.rs  callbacks.rs  configuration.rs  directory.rs  error.rs  file.rs  file_system.rs  flags.rs  lib.rs
Modules/Memory/: Build.rs  Cargo.toml
Modules/Memory/src/: ABI.rs  Allocator.rs  Cache.rs  Capability.rs  Espressif.rs  Flags.rs  Layout.rs  Linked_list_allocator.rs  Macro.rs  Manager.rs  Native.rs  Protection.rs  Region.rs  Region_allocator.rs  Statistics.rs  Trait.rs  cache.rs  capability.rs  lib.rs  macro.rs  manager.rs  protection.rs  region_allocator.rs  statistics.rs  trait.rs
Modules/New-task/: Cargo.toml
Modules/New-task/src/: main.rs
Modules/Screen/: Cargo.toml
Modules/Screen/src/: Color.rs  Error.rs  lib.rs
Modules/Synchronization/: Cargo.toml
Modules/Synchronization/src/: lib.rs
Modules/Task/: Cargo.toml
Modules/Task/Task_macros/: Cargo.toml
Modules/Task/src/: Environment_variable.rs  Error.rs  Join_handle.rs  Manager.rs  Pender.rs  Raw_mutex.rs  Raw_rwlock.rs  Signal.rs  Task.rs  Thread.rs  environment_variable.rs  error.rs  join_handle.rs  lib.rs  signal.rs  task.rs
Modules/Time/: Cargo.toml
Modules/Time/Tests/: Integration.rs  integration.rs
Modules/Time/src/: ABI.rs  Driver.rs  Error.rs  Manager.rs  error.rs  lib.rs  manager.rs
Modules/Virtual_file_system/: Cargo.toml
Modules/Virtual_file_system/Tests/: Integration.rs  integration.rs
Modules/Virtual_file_system/src/: Device.rs  Directory.rs  Error.rs  File.rs  File_system.rs  Hierarchy.rs  Macro.rs  device.rs  directory.rs  error.rs  file.rs  file_system.rs  hierarchy.rs  lib.rs  macro.rs
Modules/Virtual_machine/: Build.rs  Cargo.toml
Modules/Virtual_machine/Tests/: Test.rs  Test_2.rs  test.rs  test_2.rs
Modules/Virtual_machine/src/: Custom_data.rs  Data.rs  Environment.rs  Error.rs  Execution_environment.rs  Instance.rs  Manager.rs  Module.rs  Registrable.rs  Runtime.rs  custom_data.rs  environment.rs  error.rs  instance.rs  lib.rs  manager.rs  module.rs  registrable.rs  runtime.rs
Virtual_machine/: Cargo.toml
Virtual_machine/Symbol/: Cargo.toml
Virtual_machine/Symbol/src/: lib.rs
Virtual_machine/src/: Function.rs  Fundamentals.rs  Module.rs  Prelude.rs  Symbol.rs  lib.rs
drivers/native/: Cargo.toml
drivers/native/src/: lib.rs  time.rs
drivers/shared/: Cargo.toml
drivers/shared/src/: lib.rs
drivers/std/: Cargo.toml
drivers/std/src/: console.rs  drive_file.rs  executor.rs  io.rs  lib.rs  loader.rs  log.rs  memory.rs
drivers/wasm/: Cargo.toml
drivers/wasm/src/: executor.rs  lib.rs  log.rs  memory.rs
examples/native/: Cargo.toml
examples/native/src/: main.rs
examples/wasm/: Cargo.toml  index.html  styles.css
examples/wasm/src/: main.rs
executables/calculator/: Cargo.toml
executables/calculator/.cargo/: config.toml
executables/calculator/locales/: en.json  fr.json
executables/calculator/src/: evaluator.rs  install.rs  interface.rs  lexer.rs  lib.rs  main.rs  mod.rs  parser.rs  token.rs
executables/calculator/tests/: test.rs
executables/calculator/wasm/: Cargo.toml
(+1272 files in other folders)
