[package]
name = "xila"
version = "0.1.0"
authors = ["Alix ANNERAUD <alix@anneraud.fr>"]
edition = "2021"
resolver = "2"
rust-version = "1.82.0"

[dependencies]
# - WASM
wasm_bindings = { path = "modules/bindings/wasm", optional = true }
# - Host
abi = { path = "modules/abi", optional = true }
little_fs = { path = "modules/little_fs", optional = true }
virtual_machine = { path = "modules/virtual_machine", optional = true }
virtual_file_system = { path = "modules/virtual_file_system", optional = true }
graphics = { path = "modules/graphics", optional = true }
time = { path = "modules/time", optional = true }
task = { path = "modules/task", optional = true }
users = { path = "modules/users", optional = true }
drivers = { path = "modules/drivers", optional = true }
memory = { path = "modules/memory", optional = true }
executable = { path = "modules/executable", optional = true }
file_system = { path = "modules/file_system", optional = true }
host_bindings = { path = "modules/bindings/host", optional = true }
authentication = { path = "modules/authentication", optional = true }
log = { path = "modules/log", optional = true }
futures = { path = "modules/futures", optional = true }
shared = { path = "modules/shared", optional = true }
synchronization = { path = "modules/synchronization", optional = true }

[build-dependencies]
target = { path = "modules/target", optional = true }

[features]
default = []

Host = [
    "dep:abi",
    "dep:little_fs",
    "dep:futures",
    "dep:virtual_machine",
    "dep:virtual_file_system",
    "dep:graphics",
    "dep:task",
    "dep:time",
    "dep:users",
    "dep:drivers",
    "dep:memory",
    "dep:target",
    "dep:executable",
    "dep:file_system",
    "dep:host_bindings",
    "dep:authentication",
    "dep:log",
    "dep:shared",
    "dep:synchronization",
]
WASM = ["dep:wasm_bindings"]


[workspace]
members = [
    "modules/file_system",
    "modules/virtual_machine",
    "modules/graphics",
    "modules/task",
    "modules/users",
    "modules/drivers",
    "modules/peripherals",
    "modules/memory",
    "modules/time",
    "modules/abi",
    "modules/virtual_file_system",
    "modules/little_fs",
    "modules/target",
    "modules/bindings/utilities",
    "modules/bindings/host",
    "modules/bindings/wasm",
    "executables/file_manager",
    "executables/shell/command_line",
    "modules/executable",
    "executables/wasm",
    "executables/shell/graphical",
    "executables/terminal",
    "executables/settings",
    "modules/authentication",
    "modules/network",
    "modules/synchronization",
    "modules/task/task_macros",
    "modules/futures",
    "modules/log",
    "examples/native",
    "executables/calculator",
]
exclude = [
    "modules/virtual_machine/tests/wasm_test",
    "modules/bindings/tests/wasm_test",
    "Build_tool",
]
