[package]
name = "xila"
version = "0.1.0"
authors = ["Alix ANNERAUD <alix@anneraud.fr>"]
edition = "2024"
resolver = "2"
rust-version = "1.90.0"
license = "MIT"
description = "An operating system for embedded systems written in Rust."

[profile.release-wasm]
inherits = "release"
opt-level = 's'
strip = true
lto = true

[dependencies]
# - Always included
internationalization = { workspace = true }

# - WASM
wasm_bindings = { workspace = true, optional = true }

# - Host
abi_context = { workspace = true, optional = true }
abi_declarations = { workspace = true, optional = true }
abi_definitions = { workspace = true, optional = true }
little_fs = { workspace = true, optional = true }
virtual_machine = { workspace = true, optional = true }
virtual_file_system = { workspace = true, optional = true }
graphics = { workspace = true, optional = true }
task = { workspace = true, optional = true }
time = { workspace = true, optional = true }
users = { workspace = true, optional = true }
memory = { workspace = true, optional = true }
target = { workspace = true, optional = true }
executable = { workspace = true, optional = true }
file_system = { workspace = true, optional = true }
authentication = { workspace = true, optional = true }
log = { workspace = true, optional = true }
shared = { workspace = true, optional = true }
synchronization = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
host_bindings = { workspace = true, optional = true }
bootsplash = { workspace = true, optional = true }

[features]
default = []

executable_building = ["executable/building"]

host = [
  "dep:abi_context",
  "dep:abi_declarations",
  "dep:abi_definitions",
  "dep:little_fs",
  "dep:futures",
  "dep:virtual_file_system",
  "dep:graphics",
  "dep:task",
  "dep:time",
  "dep:users",
  "dep:memory",
  "dep:target",
  "dep:executable",
  "dep:file_system",
  "dep:authentication",
  "dep:log",
  "dep:shared",
  "dep:synchronization",
  "dep:bootsplash",
  "abi_definitions",
]
abi_definitions = ["dep:abi_definitions"]
virtual_machine = ["dep:virtual_machine", "dep:host_bindings"]
graphics_rendering_rgb565 = ["graphics/rendering_rgb565"]
graphics_rendering_xrgb8888 = ["graphics/rendering_xrgb8888"]
wasm = ["dep:wasm_bindings"]
wasm_c_bindings = ["wasm", "wasm_bindings/c_bindings"]


[workspace.dependencies]
# - Internal crates
wasm_bindings = { path = "modules/bindings/wasm" }

abi_context = { path = "modules/abi/context" }
abi_declarations = { path = "modules/abi/declarations" }
abi_definitions = { path = "modules/abi/definitions" }
little_fs = { path = "modules/little_fs" }
virtual_machine = { path = "modules/virtual_machine" }
virtual_file_system = { path = "modules/virtual_file_system" }
graphics = { path = "modules/graphics" }
time = { path = "modules/time" }
task = { path = "modules/task" }
users = { path = "modules/users" }
memory = { path = "modules/memory" }
executable = { path = "modules/executable" }
file_system = { path = "modules/file_system" }
host_bindings = { path = "modules/bindings/host" }
bindings_utilities = { path = "modules/bindings/utilities" }
authentication = { path = "modules/authentication" }
log = { path = "modules/log" }
futures = { path = "modules/futures" }
shared = { path = "modules/shared" }
synchronization = { path = "modules/synchronization" }
target = { path = "modules/target" }
network = { path = "modules/network" }
peripherals = { path = "modules/peripherals" }
bootsplash = { path = "modules/bootsplash" }
internationalization = { path = "modules/internationalization" }
testing = { path = "modules/testing" }

# - Drivers
drivers_core = { path = "drivers/core" }
drivers_espressif = { path = "drivers/espressif" }
drivers_native = { path = "drivers/native" }
drivers_shared = { path = "drivers/shared" }
drivers_std = { path = "drivers/std" }
drivers_wasm = { path = "drivers/wasm" }

# - Executables
file_manager = { path = "executables/file_manager" }
command_line_shell = { path = "executables/shell/command_line" }
graphical_shell = { path = "executables/shell/graphical" }
wasm = { path = "executables/wasm" }
terminal = { path = "executables/terminal" }
settings = { path = "executables/settings" }
calculator = { path = "executables/calculator" }

# - External crates
miniserde = { version = "0.1" }
bindgen = { version = "0.72" }
cbindgen = { version = "0.29" }
syn = { version = "2.0" }
quote = { version = "1.0" }
proc-macro2 = { version = "1.0" }
lvgl_rust_sys = { git = "https://github.com/Xila-Project/lvgl_rust_sys.git", default-features = false }
embassy-executor = { version = "0.9", default-features = false }
embassy-futures = { version = "0.1" }
embassy-sync = { version = "0.7" }
embassy-time = { version = "0.5" }
critical-section = { version = "1.2" }
embassy-net = { version = "0.7", default-features = false }
linked_list_allocator = { version = "0.10", default-features = false, features = [
  "const_mut_refs",
] }
smol_str = { version = "0.3" }
darling = { version = "0.21" }
regex = { version = "1" }
embedded-io-async = { version = "0.7", features = ["alloc"] }
embedded-io = { version = "0.7", features = ["alloc"] }

[workspace]
members = [
  "modules/file_system",
  "modules/virtual_machine",
  "modules/graphics",
  "modules/task",
  "modules/users",
  "modules/peripherals",
  "modules/memory",
  "modules/time",
  "modules/abi/definitions",
  "modules/abi/declarations",
  "modules/abi/context",
  "modules/virtual_file_system",
  "modules/little_fs",
  "modules/target",
  "modules/bindings/utilities",
  "modules/bindings/host",
  "modules/bindings/host/tests/wasm_test",
  "modules/bindings/wasm",
  "executables/file_manager",
  "executables/shell/command_line",
  "modules/executable",
  "executables/wasm",
  "executables/shell/graphical",
  "executables/terminal",
  "executables/settings",
  "modules/authentication",
  "modules/network",
  "modules/synchronization",
  "modules/task/task_macros",
  "modules/futures",
  "modules/log",
  "examples/native",
  "executables/calculator",
  "examples/wasm",
  "modules/bootsplash",
  "drivers/core",
  "drivers/espressif",
  "drivers/native",
  "drivers/shared",
  "drivers/std",
  "drivers/wasm",
  "modules/virtual_machine/tests/wasm_test",
  "modules/internationalization",
  "modules/internationalization/macros",
  "modules/graphics/fonts_generator",
  "modules/testing",
]

[patch.crates-io]
littlefs2-sys = { git = "https://github.com/AlixANNERAUD/littlefs2-sys.git", branch = "main" }
