[package]
name = "Virtual_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "espidf")'.dependencies]
paste = "1.0.14"

[target.'cfg(target_arch = "x86_64")'.dependencies]
paste = "1.0.14"
wamr-sys = { git = "https://github.com/AlixANNERAUD/wamr-sys.git" }
Symbol = { path = "Symbol" }