[package]
name = "Native_example"
version = "0.1.0"
edition = "2024"

[dependencies]
Xila = { path = "../../" }
File_manager = { path = "../../Executables/File_manager" }
Command_line_shell = { path = "../../Executables/Shell/Command_line" }
Graphical_shell = { path = "../../Executables/Shell/Graphical" }
WASM = { path = "../../Executables/WASM" }
Terminal = { path = "../../Executables/Terminal" }
Settings = { path = "../../Executables/Settings" }