[package]
name = "native_example"
version = "0.1.0"
edition = "2024"

[dependencies]
xila = { path = "../../", features = ["Host"] }
file_manager = { path = "../../Executables/File_manager" }
command_line_shell = { path = "../../Executables/Shell/Command_line" }
graphical_shell = { path = "../../Executables/Shell/Graphical" }
wasm = { path = "../../Executables/WASM" }
terminal = { path = "../../Executables/Terminal" }
settings = { path = "../../Executables/Settings" }
