[package]
name = "settings"
version = "0.1.0"
edition = "2021"

[dependencies]
graphics = { path = "../../Modules/Graphics" }
file_system = { path = "../../Modules/File_system" }
virtual_file_system = { path = "../../Modules/Virtual_file_system" }
executable = { path = "../../Modules/Executable" }
task = { path = "../../Modules/Task" }
users = { path = "../../Modules/Users" }
shared = { path = "../../Modules/Shared" }
time = { path = "../../Modules/Time" }
synchronization = { version = "0.1.0", path = "../../Modules/Synchronization" }
futures = { version = "0.1.0", path = "../../Modules/Futures" }
log = { version = "0.1.0", path = "../../Modules/Log" }
authentication = { path = "../../Modules/Authentication" }

[dev-dependencies]
drivers = { path = "../../Modules/Drivers" }
little_fs = { path = "../../Modules/LittleFS" }
command_line_shell = { path = "../Shell/Command_line" }

[[test]]
name = "integration_test"
path = "Tests/integration_test.rs"
