[package]
name = "WASM"
version = "0.1.0"
edition = "2021"
build = "Build.rs"

[dependencies]
File_system = { path = "../../Modules/File_system" }
Virtual_file_system = { path = "../../Modules/Virtual_file_system" }
Executable = { path = "../../Modules/Executable" }
Task = { path = "../../Modules/Task" }
Users = { path = "../../Modules/Users" }
Virtual_machine = { path = "../../Modules/Virtual_machine" }
Authentication = { path = "../../Modules/Authentication" }
Futures = { version = "0.1.0", path = "../../Modules/Futures" }

[dev-dependencies]
Drivers = { path = "../../Modules/Drivers" }
Time = { path = "../../Modules/Time" }
LittleFS = { path = "../../Modules/LittleFS" }
Command_line_shell = { path = "../Shell/Command_line" }
Task = { path = "../../Modules/Task" }
Memory = { path = "../../Modules/Memory" }

[[test]]
name = "Integration_test"
path = "Tests/Integration_test.rs"
