[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
file_system = { path = "../../Modules/File_system" }
virtual_file_system = { path = "../../Modules/Virtual_file_system" }
executable = { path = "../../Modules/Executable" }
task = { path = "../../Modules/Task" }
users = { path = "../../Modules/Users" }
virtual_machine = { path = "../../Modules/Virtual_machine" }
authentication = { path = "../../Modules/Authentication" }
futures = { version = "0.1.0", path = "../../Modules/Futures" }

[dev-dependencies]
drivers = { path = "../../Modules/Drivers" }
time = { path = "../../Modules/Time" }
little_fs = { path = "../../Modules/LittleFS" }
command_line_shell = { path = "../Shell/Command_line" }
task = { path = "../../Modules/Task" }
memory = { path = "../../Modules/Memory" }

[[test]]
name = "integration_test"
path = "Tests/integration_test.rs"
