[package]
name = "ABI"
version = "0.1.0"
edition = "2021"
build = "Build.rs"

[dependencies]
Virtual_file_system = { path = "../Virtual_file_system" }
File_system = { path = "../File_system" }
Task = { path = "../Task" }
Time = { path = "../Time" }
Memory = { path = "../Memory" }
Network = { path = "../Network" }
Synchronization = { version = "0.1.0", path = "../Synchronization" }
Futures = { version = "0.1.0", path = "../Futures" }
Log = { version = "0.1.0", path = "../Log" }

[build-dependencies]
cbindgen = "0.29"
 
[dev-dependencies]
Drivers = { path = "../Drivers" }
LittleFS = { path = "../LittleFS" }
Users = { path = "../Users" }
