[package]
name = "abi"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
virtual_file_system = { path = "../Virtual_file_system" }
file_system = { path = "../File_system" }
task = { path = "../Task" }
time = { path = "../Time" }
memory = { path = "../Memory" }
network = { path = "../Network" }
synchronization = { version = "0.1.0", path = "../Synchronization" }
futures = { version = "0.1.0", path = "../Futures" }
log = { version = "0.1.0", path = "../Log" }

[build-dependencies]
cbindgen = "0.29"
 
[dev-dependencies]
drivers = { path = "../Drivers" }
little_fs = { path = "../LittleFS" }
users = { path = "../Users" }
