[package]
name = "Bindings"
version = "0.1.0"
edition = "2021"
build = "Build.rs"

[dependencies]
File_system = { path = "../File_system" }
Virtual_machine = { path = "../Virtual_machine" }
Binding_tool = { git = "https://github.com/Xila-Project/Binding_tool.git", features = [
    "Native",
] }
Shared = { path = "../Shared" }
Users = { path = "../Users" }
Task = { path = "../Task" }
Graphics = { path = "../Graphics" }
Screen = { path = "../Screen" }

[dev-dependencies]
Drivers = { path = "../Drivers" }

[[test]]
name = "File_system_bindings_tests"
path = "Tests/File_system.rs"

[[test]]
name = "Task_bindings_tests"
path = "Tests/Task.rs"

# [[test]]
# name = "Graphics_bindings_tests"
# path = "Tests/Graphics.rs"
