[package]
name = "Bindings"
version = "0.1.0"
edition = "2021"
build = "Build/src/Main.rs"

[dependencies]
File_system = { path = "../File_system" }
Virtual_machine = { path = "../Virtual_machine" }
Binding_tool = { git = "https://github.com/Xila-Project/Binding_tool.git", features = [
    "Native",
] }
Shared = { path = "../Shared" }
Users = { path = "../Users" }
Task = { path = "../Task" }
Graphics = { path = "../Graphics" }

[dev-dependencies]
Drivers = { path = "../Drivers" }

[build-dependencies]
lvgl_rust_sys = { git = "https://github.com/Xila-Project/lvgl_rust_sys.git", default-features = false }
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

# [[test]]
# name = "Graphics_bindings_tests"
# path = "Tests/Graphics.rs"
