[package]
name = "executable"
version = "0.1.0"
edition = "2021"

[dependencies]
file_system = { path = "../File_system" }
virtual_file_system = { path = "../Virtual_file_system" }
task = { path = "../Task" }
users = { path = "../Users" }
futures = { version = "0.1.0", path = "../Futures" }
log = { version = "0.1.0", path = "../Log" }

[dev-dependencies]
drivers = { path = "../Drivers" }
