[package]
name = "File_system"
version = "0.1.0"
edition = "2021"

[dependencies]
littlefs2-sys = "0.2.0"
Task = { path = "../Task" }
Users = { path = "../Users" }
Shared = { path = "../Shared" }
Time = { path = "../Time" }

[dev-dependencies]
Drivers = { path = "../Drivers" }

[features]
std = []
default = ["std"]

[[test]]
name = "Integration"
path = "Tests/Integration.rs"
