[package]
name = "File_system"
version = "0.1.0"
edition = "2021"

[dependencies]
Task = { path = "../Task" }
Users = { path = "../Users" }
Shared = { path = "../Shared" }
Synchronization = { version = "0.1.0", path = "../Synchronization" }
Futures = { version = "0.1.0", path = "../Futures" }

[dev-dependencies]
Drivers = { path = "../Drivers" }

[features]
std = []
default = []
