[package]
name = "file_system"
version = "0.1.0"
edition = "2021"

[dependencies]
task = { path = "../Task" }
users = { path = "../Users" }
shared = { path = "../Shared" }
synchronization = { version = "0.1.0", path = "../Synchronization" }
futures = { version = "0.1.0", path = "../Futures" }

[dev-dependencies]
drivers = { path = "../Drivers" }

[features]
std = []
default = []
