[package]
name = "Graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
cstr_core = "0.2.6"
Task = { path = "../Task" }
File_system = { version = "0.1.0", path = "../File_system" }
lvgl_rust_sys = { git = "https://github.com/Xila-Project/lvgl_rust_sys.git", default-features = false }

[target.'cfg( target_os = "espidf" )'.dependencies]
Shared = { path = "../Shared" }


[target.'cfg( target_arch = "x86_64" )'.dependencies]
Shared = { path = "../Shared" }
Time = { path = "../Time" }

[dev-dependencies]
Users = { path = "../Users" }
Task = { path = "../Task" }

[features]
default = ["RGB565"]
RGB565 = []
ARGB8888 = []

[[test]]
name = "Graphics"
path = "Tests/Graphics.rs"
