[package]
name = "Graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
cstr_core = "0.2.6"
File_system = { path = "../File_system" }
lvgl_rust_sys = { git = "https://github.com/Xila-Project/lvgl_rust_sys.git", default-features = false }
#lvgl_rust_sys = { path = "../../../lvgl_rust_sys", default-features = false }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
Time = { path = "../Time" }
Shared = { path = "../Shared" }
Synchronization = { version = "0.1.0", path = "../Synchronization" }


[dev-dependencies]
Drivers = { path = "../Drivers" }
Users = { path = "../Users" }
Task = { path = "../Task" }
Futures = { path = "../Futures" }

[features]
default = ["RGB565"]
RGB565 = []
ARGB8888 = []
RGBA8888 = []

[[test]]
name = "Graphics"
path = "Tests/Graphics.rs"
