[package]
name = "LittleFS"
version = "0.1.0"
edition = "2021"

[dependencies]
File_system = { path = "../File_system" }
Task = { path = "../Task" }
Users = { path = "../Users" }
Time = { path = "../Time" }
littlefs2-sys = "0.3.1"
Synchronization = { version = "0.1.0", path = "../Synchronization" }

[dev-dependencies]
Drivers = { path = "../Drivers" }
