[package]
name = "LittleFS"
version = "0.1.0"
edition = "2021"

[features]
std = ["File_system/std"]
default = []

[dependencies]
File_system = { path = "../File_system" }
Task = { path = "../Task" }
Users = { path = "../Users" }
Time = { path = "../Time" }
littlefs2-sys = "0.3.1"
Synchronization = { version = "0.1.0", path = "../Synchronization" }
Futures = { path = "../Futures" }

[dev-dependencies]
Drivers = { path = "../Drivers" }
Futures = { path = "../Futures" }
