[package]
name = "little_fs"
version = "0.1.0"
edition = "2021"

[features]
std = ["file_system/std"]
default = []

[dependencies]
file_system = { path = "../File_system" }
task = { path = "../Task" }
users = { path = "../Users" }
time = { path = "../Time" }
littlefs2-sys = "0.3.1"
synchronization = { version = "0.1.0", path = "../Synchronization" }
futures = { path = "../Futures" }

[dev-dependencies]
drivers = { path = "../Drivers" }
futures = { path = "../Futures" }
