[package]
name = "Memory"
version = "0.1.0"
edition = "2021"

build = "Build.rs"

[dependencies]
portable-atomic = { version = "1.10.0", default-features = false }
[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
libc = "0.2.155"

[target.'cfg( target_os = "espidf" )'.dependencies]
esp-idf-sys = { version = "0.35.0" }

[target.'cfg( target_os = "espidf" )'.build-dependencies]
embuild = { version = "0.32.0" }

[features]
