[package]
name = "Memory"
version = "0.1.0"
edition = "2021"

build = "Build.rs"

[dependencies]
#portable-atomic = { version = "1.10.0", default-features = false }
linked_list_allocator = { version = "0.10", default-features = false, features = [
    "const_mut_refs",
] }
critical-section = "1.2"

[features]
default = ["Debug"]
Debug = []
Nightly = []