[package]
name = "New-task"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-sync = { version = "0.6.2", features = ["log"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-16384", "log"] }
embassy-time = { version = "0.4.0", features = ["log", "std", ] }
embassy-net = { version = "0.6.0", features=[ "log", "medium-ethernet", "medium-ip", "tcp", "udp", "dns", "dhcpv4", "proto-ipv6"] }
embassy-net-tuntap = { version = "0.1.0" }
embassy-net-ppp = { version = "0.2.0", features = ["log"]}
embedded-io-async = { version = "0.6.1" }
embedded-io-adapters = { version = "0.6.1", features = ["futures-03"] }
critical-section = { version = "1.1", features = ["std"] }

async-io = "1.6.0"
env_logger = "0.9.0"
futures = { version = "0.3.17" }
log = "0.4.14"
nix = "0.29.0"
clap = { version = "4.5.30", features = ["derive"] }
rand_core = { version = "0.9.1", features = ["std"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2"

[profile.release]
debug = 2