[package]
name = "Task"
version = "0.1.0"
edition = "2021"

[dependencies]
Users = { path = "../Users" }
embassy-time = { version = "0.4.0" }
embassy-futures = { version = "0.1.1" }
smol_str = { version = "0.3" }
Synchronization = { path = "../Synchronization" }

[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
embassy-executor = { version = "0.7.0", features = [
    "arch-std",
    "executor-thread",
    "log",
] }


[dev-dependencies]
tokio = { version = "1.45", features = ["full"] }
