[package]
name = "Task"
version = "0.1.0"
edition = "2021"

[dependencies]
Users = { path = "../Users" }
embassy-executor = { version = "0.7", features = [
    "arch-std",
    "executor-thread",
] }
embassy-time = { version = "0.4.0", features = ["std"] }
embassy-futures = { version = "0.1.1" }
smol_str = { version = "0.3" }
Synchronization = { path = "../Synchronization" }
Task_macros = { path = "Task_macros" }
