[package]
name = "Time"
version = "0.1.0"
edition = "2021"

[dependencies]
File_system = { path = "../File_system" }
Log = { path = "../Log" }
Shared = { path = "../Shared" }

[dev-dependencies]
Drivers = { path = "../Drivers" }
Log = { path = "../Log" }

[[test]]
name = "Integration"
path = "Tests/Integration.rs"
